2012-11-08  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-timer-call): Use debug marker in
	condition-case.

2012-11-02  Helmut Eller  <heller@common-lisp.net>

	* slime.el (find-definition.3): Fix syntax.

2012-11-02  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (condition-message): New. Binds *print-cirlce.
	(safe-condition-message): Move binding of printer vars to
	condition-message.
	(*sldb-condition-printer*): Set it to #'condition-message.

2012-11-02  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp (frame-source-location, ldb-code-to-src-loc):
	Use function-source-location for some cases that used to cause
	errors.
	(frame-package): New.
	(format-sldb-condition, call-with-syntax-hooks): Deleted. Did just
	the same as the default implementation.

2012-11-02  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([test] find-definition): Test defstruct and defvar.
	([test] find-definition.3): New.

2012-10-30  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (dd-location): Use info db as fallback.
	(struct-constructor): Return the name not the function.

2012-10-27  Helmut Eller  <heller@common-lisp.net>

	* slime.el (report-condition-with-circular-list): New test.
	* swank.lisp (safe-condition-message): Bind *print-length* and
	truncate the string after 64KB.

2012-10-20  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-location-offset): When going to a position
	causes an error, for example, trying to move beyond the end of the
	buffer, move the point to 0 and then try to use the hints.

2012-10-14  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-insert-threads): Some cleanups.
	(slime-insert-table, slime-insert-table-row)
	(slime-transpose-lists) New helpers.
	(slime-threads-table-properties): Renamed from
	*slime-threads-table-properties*
	(slime-thread-index-to-id, slime-longest-lines)
	(slime-format-threads-labels, slime-insert-thread): Deleted.
