@@ -1,3 +1,9 @@
+2012-11-11  Helmut Eller  <heller@common-lisp.net>
+
+	* swank-allegro.lisp (ldb-code-to-src-loc): Scan backward to the
+	first code point with a non-nil start-char.
+	(frame-package): Also match for ((:internal foo ...)).
+
 2012-11-08  Helmut Eller  <heller@common-lisp.net>
 
 	* slime.el (slime-timer-call): Use debug marker in
